Kubernetes/Prometheus/deploy-prometheus.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port:  '9090'
  namespace: monitoring
spec:
  selector:
    app: prometheus-server
    tier: monitoring
  ports:
    - port: 9090
      targetPort: 9090
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: monitoring
spec:
  selector:
    matchLabels:
      app: prometheus-server
      tier: monitoring
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: prometheus-server
        tier: monitoring
    spec:
      containers:
      - name: prometheus
        image: prom/prometheus:v2.15.0
        args:
          - "--config.file=/etc/prometheus/prometheus.yml"
          - "--storage.tsdb.path=/prometheus/"
        ports:
        - containerPort: 9090
        volumeMounts:
          - name: prometheus-storage-volume
            mountPath: /prometheus/
          - name: prometheus-config-volume
            mountPath: /etc/prometheus/
      volumes:
      - name: prometheus-config-volume
        configMap:
          defaultMode: 420
          name: prometheus-server-conf
      - name: prometheus-storage-volume
        persistentVolumeClaim:
          claimName: prometheus-pv-claim
